# rf-path-loss-modeling

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
results/: predicts_v_actuals.csv  running_loaded_predictions.csv  training_predicts_v_actuals.csv
src/aiml_propagation/: finetuning_factoring.py  finetuning_gsearch.py  finetuning_rfecv.py  loading.py  model.py  plotting.py  preprocess.py
